--- a/app4.json
+++ b/app4.json
@@ -29,6 +29,6 @@
   },
 "webview": {
     "active": true,
-    "url": "https://html5.gamemonetize.co/7si49vi5c3s8i2vaxg1ytmqk17tmpn3o/"
+    "url": "https://gameforge.com/en-US/littlegames/baby-games/"
   }
 }
